--- a/src/scss/application.module.scss
+++ b/src/scss/application.module.scss
@@ -2,6 +2,7 @@
 
 $z-index-base: 1;
 $z-index-navbar: 5;
+$z-index-profile-menu: 10;
 
 // [------------------------------ NAVBAR HEIGHT ------------------------------]
 
